--- a/服務端配置/PandasWS/db/import/item_db.yml
+++ b/服務端配置/PandasWS/db/import/item_db.yml
@@ -2,12 +2,17 @@ Header:
   Type: ITEM_DB
   Version: 3
 Body:
+
   - Id: 32500
     AegisName: _GM
     Name: GM
     Type: Armor
+    Weight: 100
+    Defense: 1
     Locations:
       Costume_Head_Top: true
+    ArmorLevel: 1
+    Refineable: true
     EquipLevelMin: 1
     View: 2500
     Script: |
@@ -22,3 +27,4 @@ Body:
       NoGuildStorage: true
       NoMail: true
       NoAuction: true
+
