更新補丁  主城

--- a/補丁及登入器/DATA.INI
+++ b/補丁及登入器/DATA.INI
@@ -1,11 +1,11 @@
 [Data]
-0=GM.grf
-1=official_data.grf
-2=20240324.grf
+0=new20040805.grf
+1=GM.grf
+2=official_data.grf
+3=20240324.grf
+4=
 
 
-
-
-3=data.grf
-4=rdata.grf
+5=data.grf
+6=rdata.grf
 
